[package]
name = "runner"
version = "0.6.0"
authors = ["steve donovan <steve.j.donovan@gmail.com>"]
description = "Utility for running Rust snippets"

documentation = "https://docs.rs/crate/runner"
repository = "https://github.com/stevedonovan/runner"
edition = "2021"

readme = "readme.md"

keywords = ["compiler-runner", "scripting", "snippets"]

license = "MIT"

[features]
no_quote_replacement = []

[dependencies]
easy-shortcuts = "0.3"
lapp = "0.4"
open = "=5.1.1"
lazy_static = "1.4"
semver = "1.0.22"
serde_json = "1.0.114"
isatty = "0.1.8"
toml = "0.4.5"
serde_derive = "1.0.27"
serde = "1.0.27"
shlex = "0.1.1"
dirs = "1.0"
regex = "1.10.3"

[profile.release]
panic = 'abort'
