[package]
name = "runner"
version = "0.5.0"
authors = ["steve donovan <steve.j.donovan@gmail.com>"]
description = "Utility for running Rust snippets"

documentation = "https://docs.rs/crate/runner"
repository = "https://github.com/stevedonovan/runner"
edition = "2018"

readme = "readme.md"

keywords = ["compiler-runner","scripting","snippets"]

license = "MIT"

[features]
no_quote_replacement = []

[dependencies]
lapp = "0.4"
open = "1.2"
semver = { version ="1.0", features = ["std","serde"] }
json = "0.11"
toml = "0.4.5"
csv = "1.4"
serde = { version = "1.0.27", features = ["derive"] }
shlex = "0.1.1"
dirs = "1.0"
anyhow = "1.0.102"

[profile.release]
panic = 'abort'




